--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "description": "Unbeatable Tic Tac Toe game, implemented entirely in vanilla Javascript.",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "start": "snowpack dev --verbose",
     "build": "snowpack build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest --watch"
   },
   "repository": {
     "type": "git",
@@ -20,7 +21,18 @@
   },
   "homepage": "https://github.com/atenni/ai-tic-tac-toe#readme",
   "devDependencies": {
-    "snowpack": "^3.1.2"
+    "@babel/core": "^7.13.10",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-typescript": "^7.13.0",
+    "@jest/globals": "^26.6.2",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "babel-jest": "^26.6.3",
+    "eslint": "^7.22.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-plugin-import": "^2.22.1",
+    "jest": "^26.6.3",
+    "snowpack": "^3.1.2",
+    "typescript": "^4.2.3"
   },
   "snowpack": {
     "mount": {
@@ -37,5 +49,36 @@
     "buildOptions": {
       "out": "docs"
     }
+  },
+  "eslintConfig": {
+    "extends": "airbnb-typescript/base",
+    "parserOptions": {
+      "project": "./tsconfig.json"
+    },
+    "rules": {
+      "@typescript-eslint/lines-between-class-members": [
+        "error",
+        "always",
+        {
+          "exceptAfterSingleLine": true
+        }
+      ],
+      "max-classes-per-file": "off",
+      "no-underscore-dangle": "off",
+      "no-multi-spaces": "off"
+    }
+  },
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ],
+      "@babel/preset-typescript"
+    ]
   }
 }
