--- a/package.json
+++ b/package.json
@@ -1,84 +1,14 @@
 {
-  "name": "ai-tic-tac-toe",
-  "version": "0.1.0",
-  "description": "Unbeatable Tic Tac Toe game, implemented entirely in vanilla Javascript.",
-  "main": "src/index.js",
-  "type": "module",
+  "name": "vite",
+  "private": true,
+  "version": "0.0.0",
   "scripts": {
-    "start": "snowpack dev --verbose",
-    "build": "snowpack build",
-    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest --watch"
+    "dev": "vite serve",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/atenni/ai-tic-tac-toe.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/atenni/ai-tic-tac-toe/issues"
-  },
-  "homepage": "https://github.com/atenni/ai-tic-tac-toe#readme",
   "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/preset-env": "^7.13.12",
-    "@babel/preset-typescript": "^7.13.0",
-    "@jest/globals": "^26.6.2",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "babel-jest": "^26.6.3",
-    "eslint": "^7.22.0",
-    "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-plugin-import": "^2.22.1",
-    "jest": "^26.6.3",
-    "snowpack": "^3.1.2",
-    "typescript": "^4.2.3"
-  },
-  "snowpack": {
-    "mount": {
-      "src": "/"
-    },
-    "exclude": [
-      "**/node_modules/**/*",
-      "**/.idea/**/*",
-      "**/.git/**/*"
-    ],
-    "devOptions": {
-      "open": "chrome"
-    },
-    "buildOptions": {
-      "out": "docs"
-    }
-  },
-  "eslintConfig": {
-    "extends": "airbnb-typescript/base",
-    "parserOptions": {
-      "project": "./tsconfig.json"
-    },
-    "rules": {
-      "@typescript-eslint/lines-between-class-members": [
-        "error",
-        "always",
-        {
-          "exceptAfterSingleLine": true
-        }
-      ],
-      "max-classes-per-file": "off",
-      "no-underscore-dangle": "off",
-      "no-multi-spaces": "off"
-    }
-  },
-  "babel": {
-    "presets": [
-      [
-        "@babel/preset-env",
-        {
-          "targets": {
-            "node": "current"
-          }
-        }
-      ],
-      "@babel/preset-typescript"
-    ]
+    "typescript": "^4.5.4",
+    "vite": "^2.9.9"
   }
 }
