--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,8 +3,7 @@ name: Build and deploy static site
 on:
   push:
     branches:
-      # Switch this to `main` after testing
-      - "gh-actions-website"
+      - "main"
     paths-ignore:
       - "**.md"
 
@@ -32,7 +31,7 @@ jobs:
           git init
           git add -A
           git config --local user.email "action@github.com"
-          git config --local user.name "GutHub Action"
+          git config --local user.name "GitHub Action"
           git commit -m "build and deploy static site"
       
       - name: Force push to static site branch
